--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -45,6 +45,7 @@ monitor = ,preferred,auto,1
 # ------------------------------------------------------------------------------
 exec-once = waybar
 exec-once = swaync
+exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
